--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -109,6 +109,13 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVE
 	  loading your cpufreq low-level hardware driver, using the
 	  'interactive' governor for latency-sensitive workloads.
 
+config CPU_FREQ_DEFAULT_GOV_ELEMENTALX
+   bool "elementalx"
+   select CPU_FREQ_GOV_ELEMENTALX
+   select CPU_FREQ_GOV_PERFORMANCE
+   help
+     Use the CPUFreq governor 'elementalx' as default.
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -205,6 +212,19 @@ config CPU_FREQ_GOV_CONSERVATIVE
 	  For details, take a look at linux/Documentation/cpu-freq.
 
 	  If in doubt, say N.
+
+config CPU_FREQ_GOV_ELEMENTALX
+   tristate "'elementalx' cpufreq policy governor"
+   select CPU_FREQ_TABLE
+   help
+     'elementalx' - This driver adds a dynamic cpufreq policy governor.
+
+     To compile this driver as a module, choose M here: the
+     module will be called cpufreq_elementalx.
+
+     For details, take a look at linux/Documentation/cpu-freq.
+
+     If in doubt, say N.
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
